spacing and logo fix

--- a/src/scss/default/_shortcode.scss
+++ b/src/scss/default/_shortcode.scss
@@ -331,7 +331,7 @@ Custom Row
 
     // Responsive
     @media #{$laptop-device} {
-        margin-left: 50px;
+        margin-left: -15px;
         margin-right: -15px;
     }
 
